styles/components/cards.css
.card {
  background-color: var(--light);
  width: 19rem;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
  border-radius: var(--border-radius-sm);
  display: flex;
  flex-direction: column;
  text-align: justify;
  transition: 0.4s box-shadow ease;
  position: relative;
}

.card .card-actions {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: auto 0 0;
  padding-bottom: 0.8rem;
  flex-wrap: wrap;
  row-gap: 10px;
  width: 100%;
}

.card .card-buttongroup {
  display: flex;
}

.card .card-buttongroup > button {
  text-transform: uppercase;
}

.card .card-details {
  margin: 0.7rem var(--spacing-03);
}

.card .card-content {
  font-size: 0.8rem;
  color: var(--secondary);
  margin: 0 var(--spacing-03);
}

.card .card-image {
  height: 12rem;
}

.card .card-image > img {
  border-top-left-radius: var(--border-radius-sm);
  border-top-right-radius: var(--border-radius-sm);
}

/* HORIZONTAL */
.card.card-horizontal {
  width: 22rem;
  display: flex;
  flex-direction: row;
}

.card.card-horizontal .content {
  padding: var(--spacing-03);
}

.card.card-horizontal .card-image {
  flex: 0 0 100px;
  height: auto;
}

.card.card-horizontal .card-image > img {
  border-radius: var(--border-radius-sm) 0 0 var(--border-radius-sm);
}

/* CARD-HOVER */
.card.card-hover:hover {
  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
}

/* DISMISS CARD */

.card-dismiss.card .card-header {
  display: flex;
  flex-direction: column;
}

.card-dismiss.card .card-details {
  order: 1;
}

.card-dismiss.card .card-image {
  height: 8rem;
  border-top-right-radius: 0;
  border-top-left-radius: 0;
  order: 2;
}

.card-dismiss.card .card-content {
  order: 3;
  margin-top: 0.6rem;
}

.card-dismiss.card .card-details {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* OVERLAY CARD HOVER */

.card.card-overlay,
.card.card-overlay-static {
  transition: 0.4s transform ease-in;
  position: relative;
}

.card.card-overlay:hover {
  transform: scale(1.02);
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgb(0, 0, 0, 0.2);
  opacity: 0;
  transition: 0.4s all ease;
  border-radius: var(--border-radius-sm);
}

.overlay-text {
  background: var(--secondaryLight);
  padding: 0.7rem;
  border-radius: var(--border-radius-md);
  text-transform: uppercase;
  position: absolute;
  left: 50%;
  transform: translate(-50%, 0);
  z-index: 100;
  opacity: 0;
  pointer-events: all;
  cursor: pointer;
}

.card.card-overlay:hover .overlay-text {
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  opacity: 1;
  transition: 0.4s all ease;
}

.card.card-overlay:hover .overlay {
  opacity: 1;
}

.card.card-overlay-static .overlay {
  opacity: 1;
  background: rgba(109, 108, 108, 0.5);
}

.card.card-overlay-static .overlay-text {
  opacity: 1;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
}

/* NOTIFICATION */

.card.notification-card {
  padding: 0.3rem;
  transition: background 0.4s ease;
}

.card.notification-card:hover {
  background: rgba(245, 232, 206, 0.3);
}

.card.notification-card .card-header {
  display: flex;
  align-items: center;
}

.card.notification-card .notification {
  margin-left: 0.3rem;
}

.card.notification-card .notification-message {
  font-size: 0.8rem;
  line-height: 1.1;
}

.card.notification-card .social-info {
  color: var(--secondary);
  font-size: 0.7rem;
}

.card.notification-card .seperator:before {
  content: "@";
  margin: 0 0.1rem;
}

